[gd_scene load_steps=7 format=3 uid="uid://rnpqwmxl4xfg"]

[ext_resource type="Script" uid="uid://c8i4hkugy5fv" path="res://scripts/monde.gd" id="1_13bj3"]
[ext_resource type="Texture2D" uid="uid://dioawpkpv0nbw" path="res://assets/bg.png" id="1_u5tfm"]
[ext_resource type="PackedScene" uid="uid://c270aobmwcts0" path="res://scenes/joueur.tscn" id="2_13bj3"]
[ext_resource type="PackedScene" uid="uid://beb5alw516ufg" path="res://scenes/tuyau.tscn" id="2_pguex"]
[ext_resource type="PackedScene" uid="uid://dr88akm21f4cl" path="res://scenes/sol.tscn" id="4_5o5ke"]
[ext_resource type="PackedScene" uid="uid://dcj0bfo8ryd6g" path="res://scenes/fin_partie.tscn" id="6_xy4bk"]

[node name="Monde" type="Node2D"]
script = ExtResource("1_13bj3")
scene_tuyau = ExtResource("2_pguex")

[node name="ArrierePlan" type="Sprite2D" parent="."]
texture = ExtResource("1_u5tfm")
centered = false

[node name="Joueur" parent="." instance=ExtResource("2_13bj3")]
position = Vector2(61, 384)

[node name="Sol" parent="." instance=ExtResource("4_5o5ke")]
z_index = 1

[node name="TuyauChrono" type="Timer" parent="."]
wait_time = 1.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.5
offset_right = 36.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "SCORE : 0"

[node name="FinPartie" parent="." instance=ExtResource("6_xy4bk")]

[connection signal="sol_touche" from="Sol" to="." method="_on_sol_sol_touche"]
[connection signal="timeout" from="TuyauChrono" to="." method="_on_tuyau_chrono_timeout"]
[connection signal="redemarrer" from="FinPartie" to="." method="_on_fin_partie_redemarrer"]
